peac_dev/force-app/main/default/objects/Pool__c/Pool__c.object-meta.xml
<CustomObject>
    <label>Pool</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pool Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>