peac_dev/force-app/main/default/objects/Pool__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scheduled Rate Adjustment in InfoLease</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>