peac_dev/force-app/main/default/objects/Pool__c/fields/Current_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate__c</fullName>
    <label>Current Rate</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>