peac_dev/force-app/main/default/objects/Pool__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pools</relationshipLabel>
    <relationshipName>Pools</relationshipName>
    <type>Lookup</type>
</CustomField>