peac_dev/force-app/main/default/objects/Pool__c/fields/Dealer_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Number__c</fullName>
    <formula>Dealer__r.Dealer_Number__c</formula>
    <label>Dealer Number</label>
    <type>Text</type>
</CustomField>