peac_dev/force-app/main/default/objects/Pool__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meter Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>