peac_dev/force-app/main/default/objects/Pool__c/fields/Pool_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Pool_Allowance__c</fullName>
    <label>Pool Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>