peac_dev/force-app/main/default/objects/Pool__c/fields/Pool_Key__c.field-meta.xml
<CustomField>
    <fullName>Pool_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pool Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>