peac_dev/force-app/main/default/objects/Pool__c/fields/Read_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Read_Cycle__c</fullName>
    <label>Read Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>