peac_dev/force-app/main/default/objects/Pool__c/fields/Scheduled_Rate_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Rate_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Scheduled Rate Adjustment in InfoLease</inlineHelpText>
    <label>Scheduled Rate Adjustment</label>
    <type>Checkbox</type>
</CustomField>