peac_dev/force-app/main/default/objects/Pool__c/fields/Usage_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Usage_Adjustment__c</fullName>
    <label>Usage Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>