peac_dev/force-app/main/default/objects/Pool__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Pool_Id__c</columns>
    <columns>Pool_Key__c</columns>
    <columns>Read_Cycle__c</columns>
    <columns>Dealer__c</columns>
    <columns>Dealer_Number__c</columns>
    <columns>Customer__c</columns>
    <columns>Current_Rate__c</columns>
    <columns>Pool_Allowance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>